--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -10,6 +10,8 @@ platforms:
   driver_config:
     box: opscode-centos-6.4 
     box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_centos-6.4_provisionerless.box
+    network:
+        - [private_network, ip: 33.33.33.10]
     customize:
       cpus: 1 
       memory: 1024
@@ -18,6 +20,8 @@ platforms:
   driver_config:
     box: opscode-centos-5.9 
     box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_centos-5.9_provisionerless.box
+    network:
+        - [private_network, ip: 33.33.33.11]
     customize:
       cpus: 1 
       memory: 1024
